# ComfyUI-TRA

./: README.md  config.json  load_images_nodes.py  nodes.py  pyproject.toml  relighting_zip_api.json  requirements.txt  server.py  swagger.yaml  tcl_ebsynth_batch.py  tcl_ebsynth_node.py  tcl_exr2png.py  tcl_extract_video_frames_node.py  tcl_folder2zip.py  tcl_frames2video_node.py  tcl_fresco.py  tcl_fresco_wraped_noise.py  tcl_lora_checkpoints.py  tcl_lora_flux_gen_datasets.py  tcl_lora_flux_training.py  tcl_lora_gen_datasets.py  tcl_lora_save_images.py  tcl_lora_training.py  tcl_relighting.py  tcl_relighting_api.py  tcl_relighting_zip.py  tcl_yolov8.py  tcl_yolov9.py  utils.py
ComfyUI/: depth_map_api.json  greenscreen_utils.py  normal_map_api.json  requirements.txt  server.py
files/: build.sh  frpc.toml  run.sh  runpod.txt  server.py
relighting/: Dockerfile  supervisord.conf  update_frpc_config.sh
workflow/: ebsynth_multiple_keyframes.json  workflow-tcl-ebsynth.json  workflow1.json  workflow2.json  workflow3.json  workflow4.json  workflow_yolov8.json  workflow_yolov9.json
