[project]
name = "comfyui-tra"
description = "Nodes:TCL EbSynth, TCL Extract Frames (From File), TCL Extract Frames (From Video), TCL Combine Frames, TCL Save Video (From Frames)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/leiweiqiang/ComfyUI-TRA"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TRA"
Icon = ""
